[gd_scene load_steps=6 format=3 uid="uid://cicwwkuci7uiw"]

[ext_resource type="Texture2D" uid="uid://b2ot7c5w8xr8b" path="res://graphics/UI/SettingsBackground.png" id="1_1y662"]
[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_wrtu5"]
[ext_resource type="Texture2D" uid="uid://c6pkhdcjlsstp" path="res://graphics/UI/SaveSlot.png" id="2_waem7"]
[ext_resource type="Texture2D" uid="uid://bcyikajxjhcht" path="res://graphics/UI/SaveSlotSelected.png" id="3_bbdte"]
[ext_resource type="Texture2D" uid="uid://06hfiuxmqty2" path="res://graphics/UI/BlueTitle.png" id="4_qjnv2"]

[node name="PauseMenu" type="CanvasLayer"]
visible = false
script = ExtResource("1_wrtu5")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.5
offset_top = -96.5
offset_right = 101.5
offset_bottom = 96.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1y662")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.5
offset_top = -64.0
offset_right = 75.5
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Save" type="TextureButton" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture_normal = ExtResource("2_waem7")
texture_pressed = ExtResource("3_bbdte")
texture_focused = ExtResource("2_waem7")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/Save"]
layout_mode = 0
offset_left = 2.5
offset_top = 3.5
offset_right = 150.5
offset_bottom = 29.5
text = "Save"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Load" type="TextureButton" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture_normal = ExtResource("2_waem7")
texture_pressed = ExtResource("3_bbdte")
texture_focused = ExtResource("2_waem7")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/Load"]
layout_mode = 0
offset_left = 2.5
offset_top = 3.5
offset_right = 150.5
offset_bottom = 29.5
text = "Load"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
disabled = true
texture_normal = ExtResource("2_waem7")
texture_pressed = ExtResource("3_bbdte")
texture_focused = ExtResource("2_waem7")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/Quit"]
layout_mode = 0
offset_left = 2.5
offset_top = 3.5
offset_right = 150.5
offset_bottom = 29.5
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.0
offset_top = -11.0
offset_right = 46.0
offset_bottom = 36.0
grow_horizontal = 2
texture = ExtResource("4_qjnv2")
expand_mode = 1
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="TextureRect/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -13.0
offset_right = 22.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="TextureRect/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
